初始化版本

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <module>gmall-order</module>
         <module>gmall-product</module>
         <module>gmall-ware</module>
-<!--        <module>renren-fast</module>-->
+        <module>renren-fast</module>
 <!--        <module>renren-generator</module>-->
 <!--        <module>gmall-common</module>-->
     </modules>
