初始化版本

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
         <module>gmall-product</module>
         <module>gmall-ware</module>
         <module>renren-fast</module>
-<!--        <module>renren-generator</module>-->
-<!--        <module>gmall-common</module>-->
+      <module>renren-generator</module>
+        <module>gmall-common</module>
+        <!--        <module>gmall-common</module>-->
     </modules>
 </project>
