--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,9 @@
         <module>gmall-product</module>
         <module>gmall-ware</module>
         <module>renren-fast</module>
-      <module>renren-generator</module>
+        <module>renren-generator</module>
         <module>gmall-common</module>
-        <!--        <module>gmall-common</module>-->
+        <module>gmall-gateway</module>
+
     </modules>
 </project>
